[package]
name = "proctui"
version = "0.0.1"
description = "Simple tool for Manage Procfile-based applications"
authors = ["a-chacon <andres.ch@protonmail.com>"]
license = "GPL-3.0"
edition = "2024"
keywords = ["procfile", "heroku", "cli", "tui"]
categories = ["command-line-utilities"]
repository = "https://github.com/a-chacon/proctui"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
anyhow = "1.0.95"
ansi-to-tui = "8.0.1"
vt100 = "0.15.2"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }
portable-pty = "0.9.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
