[package]
name = "proc-man"
version = "0.0.3"
description = "Manage Procfile-based applications for local development purposes."
authors = ["a-chacon <andres.ch@protonmail.com>"]
license = "GPL-3.0"
edition = "2024"
keywords = ["procfile", "heroku", "cli", "tui"]
categories = ["command-line-utilities"]
repository = "https://github.com/a-chacon/procman"

[[bin]]
name = "procman"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
anyhow = "1.0.95"
vt100 = "0.16.2"
tui-term = "0.3.4"
bytes = "1.8.0"
portable-pty = "0.9.0"
sysinfo = "0.39.5"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
